Making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
      Copyright Git.Training
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,10 +18,11 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			With some more ummy text
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Acme 2021</p>
 	</footer>
 </body>
 </html>
