mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 <!-- 
      Copyright Git.Training
 	 Adding changes before rebasing conflicts
+	 So silly
 -->
 <head>
 	<title>A Very Respectful Website</title>
@@ -18,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Blah blah
+			Silly changes
 		</p>
 	</main>
 	<footer class="container">
