--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	 Adding changes before rebasing conflicts
 -->
 <head>
-	<title>A Very Respectful Website, in a little repo</title>
+	<title>Updating title for Stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
